# ldt-2023-pds-backend-calc

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  run.sh  yoyo.ini
app/: __init__.py
app/config/: __init__.py  config.py
app/internal/auth/: models.py  repository.py  usecase.py
app/internal/calculations/: __init__.py  analyzing_model.py  expense_model.py  graph_model.py  handler.py  insight_model.py  models.py  repository.py  usecase.py
app/internal/constant/: __init__.py  handler.py  models.py  repository.py  usecase.py
app/internal/report/: generator.py
app/pkg/connectors/: __init__.py  base.py  error.py  http_client.py  postgresql.py
app/pkg/encrypt/: base.py  error.py  fernet.py  rsa.py
app/pkg/logger/: logger.py
migrations/: 20230519_01_pksOv-service-with-authorization.py  pds-backend-calc.sql
